--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.64.2",
     "react-native-dotenv": "^3.1.1",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^8.1.0",
